[gd_scene load_steps=4 format=3 uid="uid://bth5xo6bxskba"]

[ext_resource type="Script" path="res://enemy_spider.gd" id="1_60qeg"]
[ext_resource type="Texture2D" uid="uid://csdky8lro0o22" path="res://textures/enn_spider.png" id="2_nx6wh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r0kom"]
radius = 24.0

[node name="EnemySpider" type="Node2D"]
script = ExtResource("1_60qeg")
descent_delay = null
ascent_delay = null
move_speed = 192.0
is_player_toggleable = false

[node name="SpiderBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpiderBody"]
shape = SubResource("CircleShape2D_r0kom")

[node name="Sprite2D" type="Sprite2D" parent="SpiderBody"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_nx6wh")

[node name="RayCast2D" type="RayCast2D" parent="SpiderBody"]
unique_name_in_owner = true
target_position = Vector2(0, -34)

[connection signal="body_entered" from="SpiderBody" to="." method="_on_area_2d_body_entered"]
